Fixes around spacing on product pages

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -36,7 +36,6 @@ h2 {
     font-size: 14pt;
     color: var(--text-color);
     font-weight: 500;
-    margin-top: var(--spacing-xs);
     margin-bottom: var(--spacing-md);
     text-wrap: balance;
 }
